--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root{
     --light-coral: rgba(255, 117, 119,1);
     --shallow-taupe: rgba(241, 212, 212,1);
+    --shallower-taupe: rgb(255, 234, 234);
     --powder-blue: rgba(181, 214, 214,1);
     --great:rgba(184, 9, 207,1);
     --good:rgba(86, 115, 248,1);
@@ -28,7 +29,7 @@ body{
 .container{
     height:57.2rem;
     width: 42rem;
-    background-color: var(--shallow-taupe);
+    background-color: var(--shallower-taupe);
     box-shadow: 0.5rem 0.5rem 0.5rem #98b4b4;
 }
 
@@ -51,6 +52,7 @@ body{
 }
 
 .days{
+    background-color: var(--shallow-taupe);
     width: 100%;
     height: 2rem;
     display: flex;
@@ -82,6 +84,10 @@ body{
     transition: background-color 0.2s, opacity 0.2s ease-in-out;
 }
 
+.default{
+    background-color: var(--shallow-taupe);
+}
+
 .dates div:hover{
     opacity: 0.7;
     cursor: pointer;
@@ -107,7 +113,6 @@ body{
 .great{
     background-color: var(--great)
 }
-
 
 .legend{
     color: white;
@@ -135,16 +140,35 @@ body{
     color: black;
 }
 
+#save{
+    background-color: var(--shallow-taupe);
+    color: black;
+    display: none;
+    box-shadow: 0.5rem 0.5rem 0.5rem #98b4b4;
+}
+#error{
+    margin-top: 1rem;
+    width: 200%;
+    background-color: red;
+    color: black;
+    box-shadow: 0.5rem 0.5rem 0.5rem #98b4b4;
+    display: none;
+    cursor: default;
+}
+
 .notes{
     margin-left: 3rem;
-    height: 20rem;
-    width: 20rem;
+    height: 20vh;
+    width: 20vw;
     background-color: var(--straw);
     font-size: 100%;
     font-family: 'Lato', sans-serif;
     padding: 1rem;
     box-sizing: border-box;
-
+    box-shadow: 0.5rem 0.5rem 0.5rem #98b4b4;
+    display: none;
+    position:absolute;
+    right: 1vw;
 }
 
 .graph{
